<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Switch
        android:id="@+id/pir_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:switchMinWidth="30dp"
        android:switchPadding="20dp"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        android:thumbTextPadding="25dp"
        app:layout_constraintStart_toEndOf="@+id/motionText"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/sound_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:checked="true"
        android:switchMinWidth="28dp"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        app:layout_constraintStart_toEndOf="@+id/soundText"
        app:layout_constraintTop_toBottomOf="@+id/pir_switch" />

    <Switch
        android:id="@+id/light_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:checked="true"
        android:switchMinWidth="28dp"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        app:layout_constraintStart_toEndOf="@+id/lightText"
        app:layout_constraintTop_toBottomOf="@+id/sound_switch" />

    <EditText
        android:id="@+id/motionText"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/pir_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/soundText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sound_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motionText" />

    <EditText
        android:id="@+id/lightText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/light_sensor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundText" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buzzerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <SeekBar
        android:id="@+id/motionBroadcastRateSlider"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:max="100"
        app:layout_constraintStart_toEndOf="@+id/pir_switch"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/soundBroadcastRateSlider"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:max="100"
        app:layout_constraintStart_toEndOf="@+id/sound_switch"
        app:layout_constraintTop_toBottomOf="@+id/motionBroadcastRateSlider" />

    <SeekBar
        android:id="@+id/lightBroadcastRateSlider"
        android:layout_width="160dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:max="100"
        app:layout_constraintStart_toEndOf="@+id/light_switch"
        app:layout_constraintTop_toBottomOf="@+id/soundBroadcastRateSlider" />

    <TextView
        android:id="@+id/motionBroadcastRateTextView"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/motionBroadcastRateSlider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/soundBroadcastRateTextView"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/soundBroadcastRateSlider"
        app:layout_constraintTop_toBottomOf="@+id/motionBroadcastRateTextView" />

    <TextView
        android:id="@+id/lightBroadcastRateTextView"
        android:layout_width="80dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/lightBroadcastRateSlider"
        app:layout_constraintTop_toBottomOf="@+id/soundBroadcastRateTextView" />

    <TextView
        android:id="@+id/motionEntry"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motionText" />

</android.support.constraint.ConstraintLayout>